INCLUDES = -I$(top_srcdir)/..

AUTOMAKE_OPTIONS = gnu no-dependencies

noinst_LTLIBRARIES = libcxxlang.la

cxxlangdir=$(pkgincludedir)/c++/lang

libcxxlang_la_SOURCES = \
ClassCastException.cxx \
CloneNotSupportedException.cxx \
Error.cxx \
Exception.cxx \
IllegalArgumentException.cxx \
IllegalStateException.cxx \
Integer.cxx \
Long.cxx \
NullPointerException.cxx \
NumberFormatException.cxx \
Object.cxx \
OutOfMemoryError.cxx \
RuntimeException.cxx \
System.cxx \
Throwable.cxx \
UnsupportedOperationException.cxx

cxxlang_HEADERS = \
ClassCastException.h \
Cloneable.h \
CloneNotSupportedException.h \
Comparable.h \
Error.h \
Exception.h \
IllegalArgumentException.h \
IllegalStateException.h \
Integer.h \
Long.h \
NullPointerException.h \
Number.h \
NumberFormatException.h \
Object.h \
OutOfMemoryError.h \
RuntimeException.h \
String.h \
System.h \
Throwable.h \
UnsupportedOperationException.h
