INCLUDES = -I$(top_srcdir)/..

AUTOMAKE_OPTIONS = gnu no-dependencies

noinst_LTLIBRARIES = libcxxcryptospec.la

cxxcryptospecdir=$(pkgincludedir)/c++/crypto/spec

libcxxcryptospec_la_SOURCES =\
DHParameterSpec.cxx \
DHPrivateKeySpec.cxx \
DHPublicKeySpec.cxx \
IvParameterSpec.cxx \
PBEKeySpec.cxx \
SecretKeySpec.cxx

cxxcryptospec_HEADERS =\
DHParameterSpec.h \
DHPrivateKeySpec.h \
DHPublicKeySpec.h \
IvParameterSpec.h \
PBEKeySpec.h \
SecretKeySpec.h
